# SpiderProtocol

./: README.md  build.zig  build.zig.zon
docs/: README.md  overview.md
docs/protocols/: acheron-runtime-v1.md  namespace-driver-abi-v1.md  node-fs-unified-v2.md  spider-venom-wasm-abi-v1.md  spiderweb-control.md  spiderweb-fs.md  unified-v2-control.md
sdk/go/spiderwebprotocol/: README.md  generated.go  go.mod  protocol.go  protocol_test.go
sdk/python/spiderweb_protocol/: README.md  pyproject.toml
sdk/python/spiderweb_protocol/examples/: control_handshake.py  fs_hello.py
sdk/python/spiderweb_protocol/spiderweb_protocol/: __init__.py  generated.py  protocol.py
sdk/rust/spiderweb-protocol/src/: generated.rs  protocol.rs
sdk/spec/: protocol.json  wasm_abi.json
sdk/swift/SpiderwebProtocol/: README.md
sdk/typescript/spiderweb-protocol/: README.md  package-lock.json  package.json
src/: lib.zig  sdk_artifacts.zig  sdk_schema.zig  sdk_sync_main.zig  spider_venom_wasm_constants.zig  unified_parse.zig  unified_types.zig
src/spiderweb_fs/: fs_client.zig  fs_protocol.zig  websocket_transport.zig
src/spiderweb_node/: chat_job_index.zig  fs_gdrive_source_adapter.zig  fs_local_source_adapter.zig  fs_namespace_source_adapter.zig  fs_node_main.zig  fs_node_ops.zig  fs_node_server.zig  fs_node_service.zig  fs_source_adapter.zig  fs_windows_source_adapter.zig  namespace_driver.zig  node_capability_providers.zig  spider_venom_wasm_abi.zig  spider_venom_wasm_host.zig  venom_contracts.zig  venom_manifest.zig  venom_runtime_manager.zig  zwasm_runtime.zig
(+37 files in other folders)
