[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spiderweb-protocol"
version = "0.1.0"
description = "Reference Python protocol helpers for Spiderweb control and Acheron."
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
websocket = ["websockets>=14,<16"]

[tool.setuptools.packages.find]
where = ["."]
include = ["spiderweb_protocol*"]
